[package]
name = "p0f"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[features]
default = ["parse", "display", "packet"]
parse = ["display", "nom"]
display = []
packet = ["pnet"]

[dependencies]
log = "0.4"
failure = "0.1"
lazy_static = "1.3"

nom = { version = "4.2", optional = true }
pnet = { version = "0.22", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"
